2005-03-17  Erik Hjortsberg  <erik@katastrof.nu>

	* Enabled fall back techniques for the terrain material for GFX cards without shader support.

2005-03-16  Erik Hjortsberg  <erik@katastrof.nu>

	* Added kdevelop project file.

2005-03-16  Erik Hjortsberg  <erik@katastrof.nu>

	* Jesus.h, Jesus.cpp: added constructors for clean deletion of Jesus objects
	* JesusEdit: added slider to the preview window for zooming in and out on the building block
		added ability to see selected AttachPoints in the preview window

2005-03-15  Erik Hjortsberg  <erik@katastrof.nu>

	* fix for check for CEGUI
	* fix missing comma in check for devIL

2005-03-15  Erik Hjortsberg  <erik@katastrof.nu>

	* Since Ogre 1.0.0 doesn't contain CEGUI-OGRE.pc, don't look for it. It is however in Ogre CVS (they just forgot it in 1.0.0).

2005-03-15  Erik Hjortsberg  <erik@katastrof.nu>

	* Fix for segfault when generating terrain materials.

2005-03-14  Erik Hjortsberg  <erik@katastrof.nu>

	* Removed obsolete files.

2005-03-14  Eric Sandalll  <eric@sandall.us>
	* configure.ac: Fix ilInit check

2005-03-14  Erik Hjortsberg  <erik@katastrof.nu>

	* removed all dependencies of boost since CEGUI since 0.2.0 doesn't use it anymore

2005-03-09  Erik Hjortsberg  <erik@katastrof.nu>

	* made the sun a bit brighter

2005-03-09  Erik Hjortsberg  <erik@katastrof.nu>

	* return const strings

2005-03-09  Erik Hjortsberg  <erik@katastrof.nu>

	* TerrainPage.cpp: removed debug image output code 
	* TerrainPage.cpp: made MemoryDataStreams pass by pointer instead of reference
	* JesusEdit: show a construction object in the preview instead of just a model (this currently segfaults 
	* removed path to shared dirs
	* added path to splatting materials

2005-03-06  Erik Hjortsberg  <erik@katastrof.nu>

	* Use std::list instead of std::vector to avoid scary, scary bug. Thanks rakshasa and AlRiddoch.
	* Added a preview window for JesusEdit.

2005-03-04  Erik Hjortsberg  <erik@katastrof.nu>

	* compile fix
