@@ -1,5 +1,14 @@
 2005-03-17  Erik Hjortsberg  <erik@katastrof.nu>
 
+	* added modeldef's for buildingblocks
+
+2005-03-17  Erik Hjortsberg  <erik@katastrof.nu>
+
+	* AvatarEmberEntity.h: better looking comments
+	* TerrainGenerator.cpp: cast double to int
+
+2005-03-17  Erik Hjortsberg  <erik@katastrof.nu>
+
 	* Enabled fall back techniques for the terrain material for GFX cards without shader support.
 
 2005-03-16  Erik Hjortsberg  <erik@katastrof.nu>
